--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Mono&family=IBM+Plex+Mono:wght@300;400&display=swap');
+
 /*CSS*/
 *,
 *::after,
@@ -8,8 +10,9 @@
 
 html {
   font-size: 10px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
+  font-family: 'Fira Mono', monospace;
   scroll-behavior: smooth;
 }
 
@@ -18,14 +21,24 @@ a {
   text-decoration: none;
 }
 
-.container {
-  max-width: 98rem;
+.container-bar {
+  background-color: black;
   margin: 0 auto;
   padding: 0 2.2rem;
+  height: fit-content;
+}
+
+.container {
+  background-color: #292a2e;
+  margin: 0 auto;
+  padding: 0 2.2rem;
+  height: fit-content;
 }
 
 .b_half {
-  background-color:			#6A5ACD
+  background-color: black;
+  display: flex;
+  flex-direction: row;
 }
 
 /* header section */
@@ -46,6 +59,11 @@ header {
   align-items: center;
   justify-content: space-between;
   margin: 0 -1rem;
+}
+
+.logo-margin {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .nav-list-mobile {
@@ -88,14 +106,23 @@ header {
 
 /* iphone11pro section */
 
-.iphone-12-pro {
+/* .iphone-12-pro {
   background: url("images/hero/iphone-12-pro/iphone_12_pro_large.jpg");
-}
+} */
 
 .title {
   color: #fff;
   text-align: center;
+  padding-top: 7rem;
+}
+
+.title-bottom {
+  color: #fff;
+  text-align: left;
+  padding-left: 11em;
+  padding-right: 5.5em;
   padding-top: 5.5rem;
+  margin-bottom: 5.5rem;
 }
 
 .title-heading {
@@ -111,6 +138,10 @@ header {
   font-weight: 400;
 }
 
+.margin-bottom {
+  margin-bottom: 3.5rem;
+}
+
 .title-price {
   font-size: 1.7rem;
   color: #FFFFFF;
@@ -122,8 +153,25 @@ header {
   margin-top: 1.8rem;
 }
 
+.demo {
+  text-align: center;
+  background-color: #292a2e;
+  background-image: url("images/hero/chats/demo.gif");
+  height: 30rem;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+.cta-bottom {
+  color: #fff;
+  text-align: left;
+  /* margin-top: 1.8rem; */
+  margin-left: 11rem;
+  margin-bottom: 5.5rem;
+}
+
 .cta-link {
-  color:  rgb(91,195,170);;
+  color:  white;;
   font-size: 2.1rem;
   display: inline-block;
 }
@@ -138,14 +186,21 @@ header {
 
 /* iphone 11 section */
 
-.iphone-12 {
+/* .iphone-12 {
   background: url("images/hero/iphone-12/hero_iphone_12_large.jpg");
-}
+} */
 
 .title-dark {
   color:  rgb(15,16,21);;
 }
 
+.title-light {
+  color:  white;
+}
+
+.title-red {
+  color:  rgb(177, 52, 81);
+}
 
 .cta-link-darker {
   color: #0070c9;
@@ -175,12 +230,12 @@ footer{
 }
 /* Move this to bottom of style.css file always */
 .hero {
-  height: 69.2rem;
+  max-height: 69.2rem;
   background-size: auto 74;
   background-position: center;
   background-repeat: no-repeat;
-  border-top: 0.6rem solid #fff;
-  border-bottom: 0.6rem solid #fff;
+  border-top: 0.6rem solid #292a2e;
+  border-bottom: 0.6rem solid #292a2e;
 }
 
 .imac {
@@ -195,17 +250,17 @@ footer{
   .imac{
     background: url("images/hero/iMac/imac_medium.jpg");
   }
-  .iphone-12-pro {
+  /* .iphone-12-pro {
     background: url("images/hero/iphone-12-pro/iphone_12_pro_medium.jpg");
   }
   .iphone-12 {
     background: url("images/hero/iphone-12/hero_iphone_12_small.jpg");
-  }
+  } */
   .watch {
     background: url("images/hero/watch/watch_medium.jpg");
   }
   .hero {
-    height: 65rem;
+    max-height: 65rem;
     background-size: auto;
     background-position: bottom center;
     background-repeat: no-repeat;
@@ -431,5 +486,47 @@ footer{
 
   .cta-link {
     font-size: 1.9rem;
+  }
+}
+
+
+/* CSS */
+.button-40 {
+  background-color: black;
+  border: 1px solid white;
+  border-radius: .75rem;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  cursor: pointer;
+  flex: 0 0 auto;
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 1.5rem;
+  padding: .75rem 1.2rem;
+  text-align: center;
+  text-decoration: none #6B7280 solid;
+  text-decoration-thickness: auto;
+  transition-duration: .2s;
+  transition-property: background-color,border-color,color,fill,stroke;
+  transition-timing-function: cubic-bezier(.4, 0, 0.2, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: auto;
+}
+
+.button-40:hover {
+  background-color: #374151;
+}
+
+.button-40:focus {
+  box-shadow: none;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+
+@media (min-width: 768px) {
+  .button-40 {
+    padding: .75rem 1.5rem;
   }
 }
